actualización Reflexión Sara

--- a/integrantes.html
+++ b/integrantes.html
@@ -49,7 +49,9 @@
                 <h2 onclick="toggleInfo('Sara')">Sara Ortiz Higuita</h2>
                 <div id="Sara" class="integrante-info">
                     <h3>Reflexión del reto</h3>
-                    <p>Creativa y diseñadora gráfica, interesada en la comunicación visual y multimedia.</p>
+                    <p>La persona con la cual no tengo buena comunicación o tengo dificultades en ella es mi hermano del medio (es mayor que yo) desde siempre ha sido muy apartado de la familia, no nos cuenta nada de su vida, prefiere hacerla muy a parte de nosotros y aunque lo vemos casi de seguido porque vive cerca, no es que tengamos buena comunicación con él, en especial conmigo; desde muy pequeña lo he querido, siempre había intentado acercarme, tratar de que sienta un afecto o apoyo de parte mia, pero aun así no funciona.
+                    Y aunque es muy callado, siempre he sentido que él tiene cierto recentimiento hacia mí, según lo que me cuentan mis padres, nunca quizo como pensar en el hecho de tener otra hermana, siento que tal vez él quería mucho más afecto por parte de mis padres y mi otro hermano, pero al llegar yo; se le limitó esa atención. Todos sabemos que un bebé en la familia es como el centro de atención y siento que tal vez pudo quedar frustrado por esa situación.
+                    Realmente me encantaria mejorar esa situación, poder hacer que note ese cariño que le tengo; siempre que trato de acercarme o algo para hablar, siempre pasa un problema familiar, discuciones o cualquier cosa; y eso lo hace alejarse más. Nunca le he hablado del tema directamente, porque es difícil entablecer una conversación con él, y más de temas así, pero siempre trato de compartir con él, de hacer que de pronto no se sienta tal vez excluido o algo. Pero siento que nada funciona.</p>
                 </div>
             </div>
         </div>
