actualización Reflexión Samuel

--- a/integrantes.html
+++ b/integrantes.html
@@ -35,7 +35,17 @@
                 <h2 onclick="toggleInfo('Samuel')">Samuel Palacio Mazo</h2>
                 <div id="Samuel" class="integrante-info">
                     <h3>Reflexión del reto</h3>
-                    <p>Estudiante de comunicación, apasionada por el periodismo y la investigación social.</p>
+                    <p>La persona con la que tengo la peor comunicación es mi prima Marta. Ella siempre ha criticado las decisiones de todos. 
+                    Prácticamente no me cuenta nada de su vida real, pero vive pendiente de la mía para poder opinar.
+                    Siento que ella me la tiene montada y solo se me acerca con preguntas invasivas y con tono de regaño, como: 
+                    "¿Seguro que ese trabajo que tiene sí le da plata?" o 
+                    "¿Cuándo va a buscar algo de verdad?". Siento que ella necesita que su camino sea el "correcto" 
+                    y usa la crítica para sentirse superior y justificar su propia vida.
+                    Quisiera que me respetara y me dejara quieto. Cuando intento explicarle mis cosas, 
+                    ella intensifica el juicio. Yo no la confronto para no armar un chicharrón familiar, 
+                    pero su sisaña constante es un muro que me duele. Necesito que entienda que mi vida 
+                    no necesita su aprobación para que yo sea feliz.
+                    </p>
                 </div>
             </div>
             <div class="integrante">
@@ -49,9 +59,24 @@
                 <h2 onclick="toggleInfo('Sara')">Sara Ortiz Higuita</h2>
                 <div id="Sara" class="integrante-info">
                     <h3>Reflexión del reto</h3>
-                    <p>La persona con la cual no tengo buena comunicación o tengo dificultades en ella es mi hermano del medio (es mayor que yo) desde siempre ha sido muy apartado de la familia, no nos cuenta nada de su vida, prefiere hacerla muy a parte de nosotros y aunque lo vemos casi de seguido porque vive cerca, no es que tengamos buena comunicación con él, en especial conmigo; desde muy pequeña lo he querido, siempre había intentado acercarme, tratar de que sienta un afecto o apoyo de parte mia, pero aun así no funciona.
-                    Y aunque es muy callado, siempre he sentido que él tiene cierto recentimiento hacia mí, según lo que me cuentan mis padres, nunca quizo como pensar en el hecho de tener otra hermana, siento que tal vez él quería mucho más afecto por parte de mis padres y mi otro hermano, pero al llegar yo; se le limitó esa atención. Todos sabemos que un bebé en la familia es como el centro de atención y siento que tal vez pudo quedar frustrado por esa situación.
-                    Realmente me encantaria mejorar esa situación, poder hacer que note ese cariño que le tengo; siempre que trato de acercarme o algo para hablar, siempre pasa un problema familiar, discuciones o cualquier cosa; y eso lo hace alejarse más. Nunca le he hablado del tema directamente, porque es difícil entablecer una conversación con él, y más de temas así, pero siempre trato de compartir con él, de hacer que de pronto no se sienta tal vez excluido o algo. Pero siento que nada funciona.</p>
+                    <p>La persona con la cual no tengo buena comunicación o tengo dificultades en ella es mi hermano del medio 
+                    (es mayor que yo) desde siempre ha sido muy apartado de la familia, no nos cuenta nada de su vida y prefiere 
+                    hacerla muy a parte de nosotros; aunque lo vemos casi de seguido porque vive cerca, no es que tengamos buena 
+                    comunicación con él, en especial conmigo; desde muy pequeña lo he querido y siempre había intentado acercarme, 
+                    pero él siempre ha sido muy cerrado y distante.
+                    
+                    Y aunque es muy callado, siempre he sentido que él tiene cierto resentimiento hacia mí, según lo que me cuentan
+                    mis padres, nunca quizo como pensar en el hecho de tener otra hermana, siento que tal vez él quería mucho más 
+                    afecto por parte de mis padres y mi otro hermano, pero al llegar yo; se le limitó esa atención. Todos sabemos 
+                    que un bebé en la familia es como el centro de atención y siento que tal vez pudo quedar frustrado por esa situación.
+                    Realmente me encantaría mejorar esa situación, poder hacer que note ese cariño que le tengo; siempre que trato de 
+                    acercarme o algo para hablar, pasa un problema familiar, discusiones o cualquier cosa; y eso lo hace alejarse 
+                    más. Nunca le he hablado del tema directamente, porque es difícil entablar una conversación con él, y más de temas 
+                    así, pero siempre trato de compartir con él, de hacer que de pronto no se sienta tal vez excluido o algo. Pero siento 
+                    que nada funciona, sigue siendo distante.
+                    Me gustaría poder mejorar esa comunicación con él, porque siento que es una persona muy especial y que tiene mucho
+                    para dar, pero no lo hace por esa barrera que tiene con nosotros.
+                </p>
                 </div>
             </div>
         </div>
