--- a/integrantes.html
+++ b/integrantes.html
@@ -52,7 +52,22 @@
                 <h2 onclick="toggleInfo('Daniel')">Daniel Hernandez Palacio</h2>
                 <div id="Daniel" class="integrante-info">
                     <h3>Reflexión del reto</h3>
-                    <p>Especialista en comunicación digital, enfocado en redes sociales y marketing.</p>
+                    <p>La persona con la que tengo la peor comunicación es con un amigo llamado Andrés.
+                    Él es una gran persona y todo, pero solo habla de sí mismo y de sus problemas. 
+                    Cuando estamos juntos, es como si yo fuera solo el público. Prácticamente 
+                    no hace preguntas sobre mi vida, o si las hace, me interrumpe a los pocos 
+                    segundos para volver a su tema. Si yo le planteo una idea para hacer algo 
+                    diferente, como ir a un restaurante que me gusta, ver una película que me 
+                    interesa, salir a jugar futbol u otra cosa, él siempre lo descarta o propone 
+                    su alternativa inmediatamente,diciendo "mejor hagamos esto otro" o "eso es 
+                    aburrido", y lo peor de todo es que siempre se hace lo que el quiera.
+                    Siento que no le importo realmente, sino que solo me usa como un oyente 
+                    disponible y solo cuando me necesita. Me voy de nuestras reuniones sintiéndome agotado, algo frustrado e invisible.
+                    Me da pereza confrontarlo porque sé que él no lo hace con mala intención, 
+                    solo es muy egocéntrico. Quisiera que me escuchara y que nuestras 
+                    interacciones fueran equilibradas, pero no sé cómo decírselo sin que se 
+                    ofenda. Siento que mi única opción es dejar de verlo, pero no quiero 
+                    perder la amistad.</p>
                 </div>
             </div>
             <div class="integrante">
